fixed broken references throughout solution

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -11,4 +11,5 @@
   <repository path="..\src\Euclid.Common.Logging\packages.config" />
   <repository path="..\src\Euclid.Common.Storage.Azure\packages.config" />
   <repository path="..\src\Euclid.Common.Messaging\packages.config" />
+  <repository path="..\src\Euclid.Framework.Cqrs\packages.config" />
 </repositories>
