--- a/src/Euclid.Common.Storage/Euclid.Common.Storage.csproj
+++ b/src/Euclid.Common.Storage/Euclid.Common.Storage.csproj
@@ -45,6 +45,7 @@
     <Compile Include="InMemoryBlobStorage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="InMemoryRecordMapper.cs" />
+    <Compile Include="InMemoryRecordFinder.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Euclid.Common.Configuration\Euclid.Common.Configuration.csproj">
