--- a/src/Euclid.Common.Messaging/Euclid.Common.Messaging.csproj
+++ b/src/Euclid.Common.Messaging/Euclid.Common.Messaging.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MessageProcessorBase.cs" />
+    <Compile Include="PublicationRecord.cs" />
     <Compile Include="PublicationRegistry.cs" />
     <Compile Include="Envelope.cs" />
     <Compile Include="EnvelopeConverter.cs" />
