created PublicForum app

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -10,4 +10,5 @@
   <repository path="..\src\Euclid.Common.Storage.Azure\packages.config" />
   <repository path="..\src\Euclid.Common.Messaging\packages.config" />
   <repository path="..\src\Euclid.Framework.Cqrs\packages.config" />
+  <repository path="..\apps\PublicForum\packages.config" />
 </repositories>
