--- a/src/Euclid.Common/Euclid.Common.csproj
+++ b/src/Euclid.Common/Euclid.Common.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Messaging\IPublisher.cs" />
     <Compile Include="Storage\IBlob.cs" />
     <Compile Include="Storage\Binary\IBlobStorageSettings.cs" />
+    <Compile Include="Storage\IModel.cs" />
     <Compile Include="Storage\Record\IRecordMapper.cs" />
     <Compile Include="Messaging\IPublicationRecord.cs" />
     <Compile Include="Messaging\IPublicationRegistry.cs" />
@@ -84,9 +85,9 @@
     <Compile Include="Messaging\IChannel.cs" />
     <Compile Include="Messaging\MessageDispatcherState.cs" />
     <Compile Include="Messaging\ChannelState.cs" />
-    <Compile Include="Storage\IQuery.cs" />
+    <Compile Include="Storage\Model\IModelQueries.cs" />
     <Compile Include="Storage\IRecord.cs" />
-    <Compile Include="Storage\Record\IStandardRecordQueries.cs" />
+    <Compile Include="Storage\Model\IStandardModelQueries.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
