renaming; added empty implementation of ModelRepository

--- a/src/Euclid.Common.Storage.NHibernate/Euclid.Common.Storage.NHibernate.csproj
+++ b/src/Euclid.Common.Storage.NHibernate/Euclid.Common.Storage.NHibernate.csproj
@@ -56,7 +56,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NHibernateRecordMapper.cs" />
+    <Compile Include="NhRecordMapper.cs" />
+    <Compile Include="NhSimpleRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
