--- a/tests/Euclid.Common.IntegrationTests/Euclid.Common.IntegrationTests.csproj
+++ b/tests/Euclid.Common.IntegrationTests/Euclid.Common.IntegrationTests.csproj
@@ -101,7 +101,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PublicationTests.cs" />
     <Compile Include="Storage\AzureBlobStorageTests.cs" />
-    <Compile Include="Storage\MessageConfiguration.cs" />
+    <Compile Include="Storage\AutoMapperConfiguration.cs" />
     <Compile Include="Storage\Model\NhSimpleRepositoryTests.cs" />
     <Compile Include="Storage\NhRecordMapperTests.cs" />
     <Compile Include="Transport\AzureTransportTest.cs" />
