--- a/tests/Euclid.Common.TestingFakes/Euclid.Common.TestingFakes.csproj
+++ b/tests/Euclid.Common.TestingFakes/Euclid.Common.TestingFakes.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Storage\FakeMessage.cs" />
     <Compile Include="Storage\FakePublicationRecord.cs" />
+    <Compile Include="Storage\Model\FakeModel.cs" />
     <Compile Include="Transport\DifferentFakeMessage.cs" />
     <Compile Include="Transport\FakeDispatcher.cs" />
     <Compile Include="Transport\FakeMessage.cs" />
