implemented queries; sketched strawman tests

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -12,4 +12,6 @@
   <repository path="..\src\Euclid.Framework.Cqrs\packages.config" />
   <repository path="..\apps\PublicForum\packages.config" />
   <repository path="..\apps\ForumTests\packages.config" />
+  <repository path="..\apps\ForumAgent\packages.config" />
+  <repository path="..\apps\ProfileAgent\packages.config" />
 </repositories>
