--- a/src/Euclid.Common.Messaging/Euclid.Common.Messaging.csproj
+++ b/src/Euclid.Common.Messaging/Euclid.Common.Messaging.csproj
@@ -74,6 +74,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DispatcherNotConfiguredException.cs" />
     <Compile Include="MessageProcessorBase.cs" />
     <Compile Include="PublicationRecord.cs" />
     <Compile Include="PublicationRegistry.cs" />
