added chirpy coffeescript & dotless stubs

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -14,4 +14,5 @@
   <repository path="..\apps\ForumTests\packages.config" />
   <repository path="..\apps\ForumAgent\packages.config" />
   <repository path="..\apps\ProfileAgent\packages.config" />
+  <repository path="..\apps\ForumComposite\packages.config" />
 </repositories>
