--- a/apps/ForumComposite/ForumComposite.csproj
+++ b/apps/ForumComposite/ForumComposite.csproj
@@ -101,6 +101,18 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\site.js">
+      <DependentUpon>site.chirp.coffee</DependentUpon>
+    </Content>
+    <Content Include="Content\site.min.js">
+      <DependentUpon>site.chirp.coffee</DependentUpon>
+    </Content>
+    <Content Include="Content\styles.css">
+      <DependentUpon>styles.chirp.less</DependentUpon>
+    </Content>
+    <Content Include="Content\styles.min.css">
+      <DependentUpon>styles.chirp.less</DependentUpon>
+    </Content>
     <Content Include="Content\themes\swiss\custom.css" />
     <Content Include="Content\themes\swiss\favicon.png" />
     <Content Include="Content\themes\swiss\images\bookmark-off.png" />
@@ -139,13 +151,11 @@
     <Content Include="Content\themes\base\jquery.ui.tabs.css" />
     <Content Include="Content\themes\base\jquery.ui.theme.css" />
     <Content Include="Global.asax" />
-    <Content Include="Content\Site.css" />
     <Content Include="Scripts\jquery-1.5.1-vsdoc.js" />
     <Content Include="Scripts\jquery-1.5.1.js" />
     <Content Include="Scripts\jquery-1.5.1.min.js" />
     <Content Include="Scripts\jquery-ui-1.8.11.js" />
     <Content Include="Scripts\jquery-ui-1.8.11.min.js" />
-    <Content Include="Scripts\jquery.livequery.js" />
     <Content Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
@@ -162,12 +172,6 @@
     <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
-    <Content Include="Scripts\MicrosoftAjax.js" />
-    <Content Include="Scripts\MicrosoftAjax.debug.js" />
-    <Content Include="Scripts\MicrosoftMvcAjax.js" />
-    <Content Include="Scripts\MicrosoftMvcAjax.debug.js" />
-    <Content Include="Scripts\MicrosoftMvcValidation.js" />
-    <Content Include="Scripts\MicrosoftMvcValidation.debug.js" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
@@ -189,9 +193,6 @@
     <Content Include="Views\Post\Thread.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Scripts\jquery.gardenmorepager.js" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Views\Shared\TopMenu.cshtml" />
   </ItemGroup>
   <ItemGroup>
@@ -199,6 +200,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Shared\Search.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Content\site.chirp.coffee" />
+    <None Include="Content\styles.chirp.less" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
