strawman test of full query stack

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -15,4 +15,5 @@
   <repository path="..\apps\ForumAgent\packages.config" />
   <repository path="..\apps\ProfileAgent\packages.config" />
   <repository path="..\apps\ForumComposite\packages.config" />
+  <repository path="..\Euclid.Framework.Cqrs.NHibernate\packages.config" />
 </repositories>
