--- a/Euclid.Framework.Cqrs.NHibernate/Euclid.Framework.Cqrs.NHibernate.csproj
+++ b/Euclid.Framework.Cqrs.NHibernate/Euclid.Framework.Cqrs.NHibernate.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{7C5DC02C-5E2E-46A2-8343-ADE8035F141B}</ProjectGuid>
+    <ProjectGuid>{5A255BCD-5858-4CB3-BE76-177E65048D4F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ForumAgent</RootNamespace>
-    <AssemblyName>ForumAgent</AssemblyName>
+    <RootNamespace>Euclid.Framework.Cqrs.NHibernate</RootNamespace>
+    <AssemblyName>Euclid.Framework.Cqrs.NHibernate</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,20 +31,20 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Castle.Core, Version=2.5.1.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Castle.Core.2.5.2\lib\NET35\Castle.Core.dll</HintPath>
+    <Reference Include="Castle.Core">
+      <HintPath>..\packages\Castle.Core.2.5.2\lib\NET35\Castle.Core.dll</HintPath>
     </Reference>
     <Reference Include="FluentNHibernate">
-      <HintPath>..\..\packages\FluentNHibernate.1.2.0.712\lib\FluentNHibernate.dll</HintPath>
+      <HintPath>..\packages\FluentNHibernate.1.2.0.712\lib\FluentNHibernate.dll</HintPath>
     </Reference>
     <Reference Include="Iesi.Collections">
-      <HintPath>..\..\packages\Iesi.Collections.3.1.0.4000\lib\Net35\Iesi.Collections.dll</HintPath>
+      <HintPath>..\packages\Iesi.Collections.3.1.0.4000\lib\Net35\Iesi.Collections.dll</HintPath>
     </Reference>
     <Reference Include="NHibernate">
-      <HintPath>..\..\packages\NHibernate.3.1.0.4000\lib\Net35\NHibernate.dll</HintPath>
+      <HintPath>..\packages\NHibernate.3.1.0.4000\lib\Net35\NHibernate.dll</HintPath>
     </Reference>
     <Reference Include="NHibernate.ByteCode.Castle">
-      <HintPath>..\..\packages\NHibernate.Castle.3.1.0.4000\lib\Net35\NHibernate.ByteCode.Castle.dll</HintPath>
+      <HintPath>..\packages\NHibernate.Castle.3.1.0.4000\lib\Net35\NHibernate.ByteCode.Castle.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -55,52 +55,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Commands\CommentOnPost.cs" />
-    <Compile Include="Commands\PublishPost.cs" />
-    <Compile Include="Commands\RegisterUser.cs" />
-    <Compile Include="Processors\RegisterUserProcessor.cs" />
-    <Compile Include="Commands\UpdateUserProfile.cs" />
-    <Compile Include="Processors\UpdateUserProfileProcessor.cs" />
-    <Compile Include="Commands\VoteOnComment.cs" />
-    <Compile Include="Commands\VoteOnPost.cs" />
-    <Compile Include="Processors\CommentOnPostProcessor.cs" />
-    <Compile Include="Processors\PublishPostProcessor.cs" />
-    <Compile Include="Processors\VoteOnCommentProcessor.cs" />
-    <Compile Include="Processors\VoteOnPostProcessor.cs" />
+    <Compile Include="NhQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Queries\CategoryQueries.cs" />
-    <Compile Include="Queries\PostQueries.cs" />
-    <Compile Include="Queries\UserQueries.cs" />
-    <Compile Include="ReadModels\Category.cs" />
-    <Compile Include="ReadModels\Comment.cs" />
-    <Compile Include="ReadModels\Post.cs" />
-    <Compile Include="ReadModels\User.cs" />
-    <Compile Include="ReadModels\UserProfile.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Euclid.Framework.Cqrs.NHibernate\Euclid.Framework.Cqrs.NHibernate.csproj">
-      <Project>{5A255BCD-5858-4CB3-BE76-177E65048D4F}</Project>
-      <Name>Euclid.Framework.Cqrs.NHibernate</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\src\Euclid.Common.Storage.NHibernate\Euclid.Common.Storage.NHibernate.csproj">
-      <Project>{A5B72DFB-6698-420C-ADCC-3F2D28C4F65E}</Project>
-      <Name>Euclid.Common.Storage.NHibernate</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\src\Euclid.Common\Euclid.Common.csproj">
-      <Project>{F3A0C178-15D9-4E18-B673-28B80F40E665}</Project>
-      <Name>Euclid.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\src\Euclid.Framework.Cqrs\Euclid.Framework.Cqrs.csproj">
-      <Project>{58D2349E-9C39-485E-861E-E337ACF186B6}</Project>
-      <Name>Euclid.Framework.Cqrs</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\src\Euclid.Framework\Euclid.Framework.csproj">
-      <Project>{8BA2EA0C-2220-4390-A87C-79E96E40DFD0}</Project>
-      <Name>Euclid.Framework</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\src\Euclid.Common.Storage.NHibernate\Euclid.Common.Storage.NHibernate.csproj">
+      <Project>{A5B72DFB-6698-420C-ADCC-3F2D28C4F65E}</Project>
+      <Name>Euclid.Common.Storage.NHibernate</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\src\Euclid.Common\Euclid.Common.csproj">
+      <Project>{F3A0C178-15D9-4E18-B673-28B80F40E665}</Project>
+      <Name>Euclid.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\src\Euclid.Framework\Euclid.Framework.csproj">
+      <Project>{8BA2EA0C-2220-4390-A87C-79E96E40DFD0}</Project>
+      <Name>Euclid.Framework</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
