--- a/tests/Euclid.Composites.MetadataHost/Web.config
+++ b/tests/Euclid.Composites.MetadataHost/Web.config
@@ -9,7 +9,7 @@
     <add key="webpages:Version" value="1.0.0.0"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
-      <add key="RouteDebugger:Enabled" value="false" />
+      <add key="RouteDebugger:Enabled" value="true" />
   </appSettings>
     
   <system.web>
