--- a/src/Euclid.Composites/Euclid.Composites.csproj
+++ b/src/Euclid.Composites/Euclid.Composites.csproj
@@ -65,6 +65,12 @@
     <CodeAnalysisFailOnMissingRules>false</CodeAnalysisFailOnMissingRules>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper">
+      <HintPath>..\..\packages\AutoMapper.1.1.0.118\lib\AutoMapper.dll</HintPath>
+    </Reference>
+    <Reference Include="FluentNHibernate">
+      <HintPath>..\..\packages\FluentNHibernate.1.2.0.712\lib\FluentNHibernate.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -85,9 +91,13 @@
     <Compile Include="Metadata\Metadata.cs" />
     <Compile Include="Metadata\CommandMetadata.cs" />
     <Compile Include="Metadata\PropertyMetadata.cs" />
-    <Compile Include="Mvc\BiDirectionalMapCollection.cs" />
-    <Compile Include="Mvc\IBiDirectionalMapper.cs" />
-    <Compile Include="Mvc\IMapper.cs" />
+    <Compile Include="Mvc\MappingPipeline\GetCommandStep.cs" />
+    <Compile Include="Mvc\MappingPipeline\GetInputModelStep.cs" />
+    <Compile Include="Mvc\MappingPipeline\GetMapStepBase.cs" />
+    <Compile Include="Mvc\MappingPipeline\IMapper.cs" />
+    <Compile Include="Mvc\MappingPipeline\MapCommandPipelineData.cs" />
+    <Compile Include="Mvc\MappingPipeline\MapperNotFoundException.cs" />
+    <Compile Include="Mvc\MappingPipeline\MapperRegistry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
